--- a/src/pages/Order/Gallery/styles.styl
+++ b/src/pages/Order/Gallery/styles.styl
@@ -152,6 +152,6 @@ html[orientation="portrait"]
 
     @media (max-width: 450px) {
         .gallery {
-            padding: 1rem 1rem 14rem 1rem;
+            padding: 1rem 1rem 12.5rem 1rem;
         }
     }
